--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,10 +17,9 @@ jobs:
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v2.7.5
         env:
-          # Set CC_TEST_REPORTER_ID as secret of your repo
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-          JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
+          JACOCO_SOURCE_PATH: "${{github.workspace}}/commons/src/main/java ${{github.workspace}}/core/src/main/java"
         with:
-          # The report file must be there, otherwise Code Climate won't find it
-          coverageCommand: mvn test
-          coverageLocations: ${{github.workspace}}/target/site/jacoco/jacoco.xml:jacoco
+          coverageLocations: |
+            ${{github.workspace}}/commons/target/site/jacoco/jacoco.xml:jacoco
+            ${{github.workspace}}/core/target/site/jacoco/jacoco.xml:jacoco
