feat: upgraded to JDK 15

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,8 +12,8 @@
   <artifactId>core</artifactId>
 
   <properties>
-    <maven.compiler.source>14</maven.compiler.source>
-    <maven.compiler.target>14</maven.compiler.target>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
   <dependencies>
