--- a/sample-bundle/pom.xml
+++ b/sample-bundle/pom.xml
@@ -44,7 +44,7 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName>
-              ${project.groupId}.${project.artifactId}
+              ${project.artifactId}
             </Bundle-SymbolicName>
             <Bundle-Name>${project.name}</Bundle-Name>
             <Bundle-Version>${project.version}</Bundle-Version>
