--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
       <version>1.1.0</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.osgi/org.osgi.service.cm -->
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.service.cm</artifactId>
+      <version>1.5.0</version>
+      <scope>provided</scope>
+    </dependency>
+
 
 
 
