feat: place the SCR bundle directly in the plugins folder

--- a/sample-bundle-scr/pom.xml
+++ b/sample-bundle-scr/pom.xml
@@ -68,6 +68,7 @@
           <archive>
             <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
           </archive>
+          <outputDirectory>../plugins</outputDirectory>
         </configuration>
       </plugin>
     </plugins>
