Fix: hopefully solves slf4j issue
Signed-off-by: Jürgen Albert <j.albert@data-in-motion.biz>

--- a/sample-bundle/pom.xml
+++ b/sample-bundle/pom.xml
@@ -36,6 +36,7 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
+<!--       You might want to condider replacing this with the config from the sample-bundle-src config -->
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
