--- a/sample-bundle-scr/pom.xml
+++ b/sample-bundle-scr/pom.xml
@@ -52,6 +52,14 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <bnd><![CDATA[
+          -includeresource: slf4j-api-[0-9.]*.jar;logback-*-[0-9.]*.jar;lib:=true
+          Import-Package: org.osgi.framework,org.xml.sax,org.xml.sax.helpers,javax.xml.parsers,com.mornati.sample.commons.plugins,com.mornati.sample.commons.plugins.dto
+          Private-Package: com.mornati.sample.plugin.psp.scr
+          Export-Service: com.mornati.sample.plugin.psp.scr.SampleScr
+          ]]></bnd>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
