--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.mornati.sample</groupId>
       <artifactId>commons</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 
