--- a/sample-bundle-scr/pom.xml
+++ b/sample-bundle-scr/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>com.mornati.sample</groupId>
       <artifactId>commons</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
