--- a/sample-bundle/pom.xml
+++ b/sample-bundle/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>com.mornati.sample</groupId>
       <artifactId>commons</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
