fix: libraries share with bundles

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
       <version>0.8.6</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>net.jqwik</groupId>
+      <artifactId>jqwik</artifactId>
+      <version>1.5.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
