--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -2,20 +2,19 @@
 # Felix Framework settings
 # --------------------------------
 # If true will configure a shutdown hook to shutdown the framework on JVM shutdown
-pluginsService.felix.shutdown.hook=true
+config.felix.shutdown.hook=true
 # Where is the felix bundle cache dir
-pluginsService.org.osgi.framework.storage=./core/target/felix-cache
+config.org.osgi.framework.storage=./core/target/felix-cache
 # When to clean the felix-cache directory
-pluginsService.org.osgi.framework.storage.clean=onFirstInit
+config.org.osgi.framework.storage.clean=onFirstInit
 # Directory to look for bundles to deploy once when framework first loads
-pluginsService.felix.auto.deploy.dir=./core/target/internal-bundles
+config.felix.auto.deploy.dir=./core/target/internal-bundles
 # Actions to perform on discovered bundles
-pluginsService.felix.auto.deploy.action=install,start,update,uninstall
-pluginsService.felix.startlevel.bundle=1
-
-pluginsService.felix.fileinstall.dir=./plugins
-pluginsService.felix.fileinstall.log.level=2
-pluginsService.felix.fileinstall.bundles.updateWithListeners=true
-
-pluginsService.org.osgi.framework.system.packages.extra=com.mornati.sample.commons.plugins,com.mornati.sample.commons.plugins.dto
+config.felix.auto.deploy.action=install,start,update,uninstall
+config.felix.startlevel.bundle=1
+config.felix.fileinstall.dir=./plugins
+config.felix.fileinstall.log.level=2
+config.felix.fileinstall.bundles.updateWithListeners=true
+config.org.osgi.framework.system.packages.extra=org.osgi.framework,org.xml.sax,org.xml.sax.helpers,javax.xml.parsers,javax.naming
+config.auto.exported.packages=com.mornati.sample.commons,org.slf4j
 
