--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.2</version>
+    <version>2.6.2</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.mornati.sample</groupId>
@@ -22,10 +22,11 @@
   <description>Sample OGGi / SpringBoot integration</description>
 
   <properties>
-    <java.version>15</java.version>
+    <java.version>17</java.version>
     <osgi.version>8.0.0</osgi.version>
-    <felix.version>7.0.0</felix.version>
+    <felix.version>7.0.3</felix.version>
     <bundle.plugin.version>5.1.1</bundle.plugin.version>
+    <jacoco.maven.plugin.version>0.8.7</jacoco.maven.plugin.version>
   </properties>
 
   <dependencies>
@@ -108,13 +109,13 @@
     <dependency>
       <groupId>org.jacoco</groupId>
       <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.8.6</version>
+      <version>${jacoco.maven.plugin.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>net.jqwik</groupId>
       <artifactId>jqwik</artifactId>
-      <version>1.5.0</version>
+      <version>1.6.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -123,7 +124,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.6</version>
+        <version>${jacoco.maven.plugin.version}</version>
         <executions>
           <execution>
             <goals>
