--- a/core/pom.xml
+++ b/core/pom.xml
@@ -50,7 +50,7 @@
               <goal>copy-dependencies</goal>
             </goals>
             <configuration>
-              <includeArtifactIds>org.apache.felix.fileinstall,org.osgi.util.function,org.osgi.util.promise,org.apache.felix.scr,org.osgi.service.cm</includeArtifactIds>
+              <includeArtifactIds>org.apache.felix.fileinstall,org.apache.felix.shell,org.apache.felix.shell.remote,org.osgi.util.function,org.osgi.util.promise,org.apache.felix.scr,org.osgi.service.cm</includeArtifactIds>
               <outputDirectory>${project.build.directory}/internal-bundles</outputDirectory>
               <overWriteReleases>false</overWriteReleases>
               <overWriteSnapshots>true</overWriteSnapshots>
